WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86098
MediaStream API: Fix MediaHints parsing
https://bugs.webkit.org/show_bug.cgi?id=86098
Summary
MediaStream API: Fix MediaHints parsing
Tommy Widenflycht
Reported
2012-05-10 07:26:46 PDT
Fixed a stupid copy-n-paste error.
Attachments
Patch
(1.47 KB, patch)
2012-05-10 07:31 PDT
,
Tommy Widenflycht
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tommy Widenflycht
Comment 1
2012-05-10 07:31:06 PDT
Created
attachment 141166
[details]
Patch
Adam Barth
Comment 2
2012-05-10 11:40:47 PDT
Comment on
attachment 141166
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=141166&action=review
> Source/WebCore/ChangeLog:8 > + Not currently testable. Working on a series of patches that will fix that.
Tommy tells me that this is coming in the next couple days.
WebKit Review Bot
Comment 3
2012-05-10 12:16:38 PDT
Comment on
attachment 141166
[details]
Patch Clearing flags on attachment: 141166 Committed
r116675
: <
http://trac.webkit.org/changeset/116675
>
WebKit Review Bot
Comment 4
2012-05-10 12:16:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug