MediaStream API: Fix MediaHints parsing https://bugs.webkit.org/show_bug.cgi?id=86098

Reviewed by Adam Barth.

Not currently testable. Working on a series of patches that will fix that.

* Modules/mediastream/PeerConnection00.cpp:
(WebCore::PeerConnection00::createMediaHints):


Canonical link: https://commits.webkit.org/103716@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116675 268f45cc-cd09-0410-ab3c-d52691b4dbfc